# cli

./: Cargo.toml  README.rst
objects/: task_definition_skeleton.json
src/: client.rs  commands.rs  env.rs  env_vars.rs  environments.rs  main.rs  project.rs  projects.rs  schemas.rs  services.rs  utils.rs
src/api_client/: client.rs  errors.rs  mod.rs  schemas.rs  types.rs  utils.rs
src/api_client/endpoints/: buckets.rs  databases.rs  deployments.rs  env_vars.rs  environments.rs  mod.rs  projects.rs  resources.rs  services.rs
src/db/: create.rs  list.rs  mod.rs  utils.rs
src/service/: ecr.rs  ecs.rs  mod.rs
src/services/: add_bucket.rs  add_db.rs  create.rs  deploy.rs  list.rs  mod.rs  statics_bucket.rs  types.rs  update.rs  utils.rs
