[package]
name = "chiliseed"
version = "0.1.0"
authors = ["ana <ana@altonotch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.44"
rusoto_core = "0.42.0"
rusoto_credential = "0.42.0"
rusoto_ecr = "0.42.0"
rusoto_ecs = "0.42.0"
structopt = "0.3.5"
log = "0.4.8"
pretty_env_logger = "0.3.1"
